--- a/GoogleFormFill/project.json
+++ b/GoogleFormFill/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "Fill form in Google form",
+  "name": "GoogleFormFill",
   "description": "Blank Process",
   "main": "Google form automation.xaml",
   "dependencies": {
@@ -46,7 +46,7 @@
   "entryPoints": [
     {
       "filePath": "Google form automation.xaml",
-      "uniqueId": "0808188b-d425-452e-839d-a0a23971aa84",
+      "uniqueId": "8dfc55cf-e9bc-4b56-896a-8c7cd3d625f8",
       "input": [],
       "output": []
     }
